add css folder and alias, add assets folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "containers/*": ["containers/*"],
       "reducers/*": ["reducers/*"],
       "layouts/*": ["layouts/*"],
-      "services/*": ["services/*"]
+      "services/*": ["services/*"],
+      "css/*": ["css/*"]
     }
   },
   "include": [
